--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,22 @@ readme = "README.md"
 license = { file = "LICENSE" }
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 
-dependencies = ["numpy>=2.3.3", "pandas>=2.3.2", "treelib>=1.8.0"]
+dependencies = [
+    "numpy==2.3.3", 
+    "pandas==2.3.2", 
+    "treelib==1.8.0", 
+    "matplotlib==3.10.6",
+    "seaborn==0.13.2"
+]
 
 [project.urls]
 Homepage = "https://github.com/mateushmd/wisdom-tree"
 "Bug Tracker" = "https://github.com/mateushmd/wisdom-tree/issues"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["wisdom_tree"]
+exclude = ["tests*", "data*"]
